--- a/Composing the System/Deploying without Docker/task-info.yaml
+++ b/Composing the System/Deploying without Docker/task-info.yaml
@@ -1,7 +1,5 @@
 type: theory
 files:
-  - name: invsys/app.py
-    visible: true
   - name: __init__.py
     visible: false
   - name: gateway/__init__.py
@@ -15,4 +13,6 @@ files:
   - name: invsys/dal.py
     visible: true
   - name: invsys/requirements.txt
+    visible: true
+  - name: invsys/api.py
     visible: true
