--- a/Building the Gateway Application/Get Resource/docker-compose.yaml
+++ b/Building the Gateway Application/Get Resource/docker-compose.yaml
@@ -6,8 +6,13 @@ services:
         image: flask-app-gateway-img
         ports:
             - "5001:5001"
+        depends_on:
+            invsys:
+                condition: service_started
+
     invsys:
         build: invsys
         container_name: flask-app-invsys
         image: flask-app-invsys-img
-
+        ports:
+            - "5000:5000"
