--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 flask~=2.2.2
 flask-restful
-requests~=2.28.1
+# https://github.com/google-deepmind/alphafold/issues/867#issuecomment-1984260145
+requests<2.29.0
+urllib3<2.0
 flask-unittest
 aiodocker~=0.21.0
 docker~=6.0.1
