removed remaining mentions of Resource (old implementation) from the files and names

--- a/Composing the System/Deploying without Docker/task-info.yaml
+++ b/Composing the System/Deploying without Docker/task-info.yaml
@@ -4,7 +4,7 @@ files:
     visible: false
   - name: gateway/__init__.py
     visible: true
-  - name: gateway/app.py
+  - name: gateway/application.py
     visible: true
   - name: gateway/requirements.txt
     visible: true
