--- a/Building the Gateway Application/Get Devices/task-info.yaml
+++ b/Building the Gateway Application/Get Devices/task-info.yaml
@@ -3,22 +3,13 @@ files:
   - name: gateway/application.py
     visible: true
     placeholders:
-      - offset: 186
-        length: 54
-        placeholder_text: "# TODO: add a route for GET with item id"
-      - offset: 303
-        length: 57
-        placeholder_text: "# TODO: add a route for DELETE"
-      - offset: 422
-        length: 38
-        placeholder_text: "# TODO: add a route for POST"
-      - offset: 511
-        length: 54
-        placeholder_text: "# TODO: add a route for PUT"
+      - offset: 357
+        length: 62
+        placeholder_text: "# TODO: complete the function"
   - name: tests/test_task.py
     visible: false
   - name: __init__.py
-    visible: false
+    visible: true
   - name: tests/__init__.py
     visible: false
   - name: gateway/__init__.py
@@ -33,3 +24,11 @@ files:
     visible: true
   - name: invsys/requirements.txt
     visible: true
+  - name: docker-compose.yaml
+    visible: false
+  - name: gateway/Dockerfile
+    visible: false
+  - name: gateway/requirements.txt
+    visible: false
+  - name: runConfigurations/Get_Resource_Test.run.xml
+    visible: false
