--- a/Building the Gateway Application/Put Device/task-info.yaml
+++ b/Building the Gateway Application/Put Device/task-info.yaml
@@ -3,18 +3,9 @@ files:
   - name: gateway/application.py
     visible: true
     placeholders:
-      - offset: 186
-        length: 54
-        placeholder_text: "# TODO: add a route for GET with item id"
-      - offset: 303
-        length: 57
-        placeholder_text: "# TODO: add a route for DELETE"
-      - offset: 422
-        length: 38
-        placeholder_text: "# TODO: add a route for POST"
-      - offset: 511
-        length: 54
-        placeholder_text: "# TODO: add a route for PUT"
+      - offset: 1421
+        length: 274
+        placeholder_text: return 'Hello from PUT'
   - name: tests/test_task.py
     visible: false
   - name: __init__.py
@@ -33,3 +24,13 @@ files:
     visible: true
   - name: invsys/requirements.txt
     visible: true
+  - name: gateway/Dockerfile
+    visible: false
+  - name: gateway/requirements.txt
+    visible: false
+  - name: docker-compose.yaml
+    visible: false
+  - name: runConfigurations/Put_Resource_Test.run.xml
+    visible: false
+  - name: runConfigurations/Put_resource_Compose.run.xml
+    visible: false
