--- a/Building the Gateway Application/lesson-info.yaml
+++ b/Building the Gateway Application/lesson-info.yaml
@@ -1,8 +1,8 @@
 content:
-- Introduction
-- Define routes
-- Get Resource
-- Delete Resource
-- Post Resource
-- Put Resource
-- Add a Dockerfile and requirements.txt
+  - Introduction
+  - Define routes
+  - Get Devices
+  - Delete Device
+  - Post Device
+  - Put Device
+  - Add a Dockerfile and requirements.txt
