--- a/Building the Gateway Application/Introduction/task-info.yaml
+++ b/Building the Gateway Application/Introduction/task-info.yaml
@@ -5,9 +5,9 @@ files:
   - name: gateway/application.py
     visible: true
   - name: gateway/__init__.py
-    visible: true
+    visible: false
   - name: invsys/__init__.py
-    visible: true
+    visible: false
   - name: invsys/api.py
     visible: true
   - name: invsys/dal.py
