--- a/Building the Gateway Application/Put Device/task-info.yaml
+++ b/Building the Gateway Application/Put Device/task-info.yaml
@@ -13,9 +13,9 @@ files:
   - name: tests/__init__.py
     visible: false
   - name: gateway/__init__.py
-    visible: true
+    visible: false
   - name: invsys/__init__.py
-    visible: true
+    visible: false
   - name: invsys/api.py
     visible: true
   - name: invsys/dal.py
