--- a/Introduction/lesson-info.yaml
+++ b/Introduction/lesson-info.yaml
@@ -1,5 +1,6 @@
 content:
-- Getting Started
-- Multi-component application
-- Python environments and pip
-- Flask REST API
+  - Getting Started
+  - Preflight check
+  - Multi-component application
+  - Python environments and pip
+  - Flask REST API
