Fixes after proofreading

--- a/Introduction/lesson-info.yaml
+++ b/Introduction/lesson-info.yaml
@@ -1,5 +1,5 @@
 content:
-  - Getting Started
+  - Getting started
   - Preflight check
   - Multi-component application
   - Python environments and pip
