--- a/course-info.yaml
+++ b/course-info.yaml
@@ -3,10 +3,10 @@ title: Flask course
 language: English
 summary: " <p>This is a course for beginners who want to learn how to build a backend\
   \ application consisting of multiple microservices with <a href=\"https://flask.palletsprojects.com\"\
-  >Flask</a>. In course you will create the application consisting of two backend\
+  >Flask</a>. In this course, you will create an application consisting of two backend\
   \ components:</p> <ol> <li>A simple API that performs basic CRUD (Create, Read/Retrieve,\
   \ Update, and Delete) operations on a database.</li> <li>An API gateway backend\
-  \ that routs client requests.</li> </ol> <p>You will also learn how to deploy your\
+  \ that routes client requests.</li> </ol> <p>You will also learn how to deploy your\
   \ application on <a href=\"https://www.docker.com\">Docker</a> using the <a href=\"\
   https://docs.docker.com/compose/\">Docker Compose</a> tool and test it with <a href=\"\
   https://httpie.io/\">HTTPie</a>.</p> "
