Rename preflight check with underscore

--- a/Introduction/lesson-info.yaml
+++ b/Introduction/lesson-info.yaml
@@ -1,6 +1,6 @@
 content:
   - Getting started
-  - Preflight check
+  - Preflight_check
   - Multi-component application
   - Python environments and pip
   - Flask REST API
