Add surveys and rename the course in readme and description

--- a/Composing the System/lesson-info.yaml
+++ b/Composing the System/lesson-info.yaml
@@ -1,4 +1,5 @@
 content:
-- Docker-compose
-- Deploying without Docker
-- What's next
+  - Docker-compose
+  - Deploying without Docker
+  - What's next
+  - Feedback survey
