--- a/Introduction/lesson-info.yaml
+++ b/Introduction/lesson-info.yaml
@@ -1,5 +1,6 @@
 content:
   - Getting started
+  - Getting to know you
   - Preflight_check
   - Multi-component application
   - Python environments and pip
