--- a/course-info.yaml
+++ b/course-info.yaml
@@ -10,8 +10,11 @@ summary: " <p>This is a course for beginners who want to learn how to build a ba
   \ application on <a href=\"https://www.docker.com\">Docker</a> using the <a href=\"\
   https://docs.docker.com/compose/\">Docker Compose</a> tool and test it with <a href=\"\
   https://httpie.io/\">HTTPie</a>.</p> "
+vendor:
+  name: JetBrains
+  email: support@jetbrains.com
+  url: https://www.jetbrains.com/
 programming_language: Python
-#programming_language_version: 3.10
 environment: unittest
 content:
   - Introduction
